--- a/styles.css
+++ b/styles.css
@@ -15,7 +15,7 @@ body{
 #header{
     width: 100%;
     height: 100vh;
-    background-image: url(images/backround1.png);
+/*     background-image: url(images/backround1.png); */
     background-size: 500px;
     background-repeat: no-repeat ;
     background-position: right;
@@ -376,7 +376,7 @@ nav .none{
 /* --------------CSS For Small Screen---------- */
 @media only screen and (max-width: 600px){
     #header{
-        background-image: url(images/backround1.png);
+/*         background-image: url(images/backround1.png); */
         background-size: 250px;
     background-repeat: no-repeat ;
     background-position: right;
